--- a/aula-1-html/index.html
+++ b/aula-1-html/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
 </head>
 
 <body>
-    <img src="image1.jpg" alt="Snoopy tomando café" style="width:250px;height:250px;">
+    <img src="img\image1.jpg" alt="Snoopy tomando café" style="width:250px;height:250px;" />
     <h1>Flávio Soares</h1>
     <p>Um aprendiz de programação.</p>
     <p2>Tenho 22 anos, uma pessoa interessada em estudar e praticar programação.
@@ -33,8 +34,9 @@
     <hr />
     <p>Ei, veja esses gatinhos fofos e clique na imagem para uma surpresa!</p>
     <a href="https://www.youtube.com/watch?v=cu71GJlMHzY" target="_blank">
-        <img src="https://mmedia.notitarde.com.ve/19502/agencia-26108.jpg" style="width:550px;height:300px;;">
+        <img src="https://mmedia.notitarde.com.ve/19502/agencia-26108.jpg" style="width:550px;height:300px;;" />
     </a>
+    <h4><a href="/contato/contato.html" target="_blank">Entre em contato!</a></h4>
 </body>
 
 </html>
