--- a/aula-1-html/index.html
+++ b/aula-1-html/index.html
@@ -8,12 +8,19 @@
 </head>
 
 <body>
-    <img src="img\image1.jpg" alt="Snoopy tomando café" style="width:250px;height:250px;" />
-    <h1>Flávio Soares</h1>
-    <p>Um aprendiz de programação.</p>
-    <p2>Tenho 22 anos, uma pessoa interessada em estudar e praticar programação.
-        <strong>Gosto de gatos</strong> e de <em>ciência</em>.
-    </p2>
+
+    <table cellspacing="20">
+        <tr>
+            <td><img src="img\image.jpg" alt="Snoopy tomando café" /></td>
+            <td>
+                <h1>Flávio Soares</h1>
+                <p>Um aprendiz de programação.</p>
+                <p2>Tenho 22 anos, uma pessoa interessada em estudar e praticar programação.
+                    <strong>Gosto de gatos</strong> e de <em>ciência</em>.
+                </p2>
+            </td>
+        </tr>
+    </table>
     <hr />
     <h2>Um pouco mais sobre mim</h2>
     <ul>
@@ -37,6 +44,55 @@
         <img src="https://mmedia.notitarde.com.ve/19502/agencia-26108.jpg" style="width:550px;height:300px;;" />
     </a>
     <h4><a href="/contato/contato.html" target="_blank">Entre em contato!</a></h4>
+
+
+    <table border="2">
+        <thead>
+            <tr>
+                <th scope="col">Ingredientes Secos</th>
+                <th scope="col">Ingredientes Líquidos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Farinha de trigo</td>
+                <td>Água</td>
+            </tr>
+            <tr>
+                <td>Fermento Biológico Seco</td>
+                <td>Ovo</td>
+            </tr>
+            <tr>
+                <td>Açúcar</td>
+                <td>Extrato de Baunilha</td>
+            </tr>
+        </tbody>
+    </table>
+    <hr />
+    <h3>Tabela para aprendizado</h3>
+    <table border="1">
+        <tr>
+            <th colspan="2">Minhas Habilidades</th>
+        </tr>
+        <tr>
+            <th scope="row" align="left">HTML e CSS</th>
+            <td>&#127775 &#127775</td>
+        </tr>
+        <tr>
+            <th scope="row" align="left">JavaScript</th>
+            <td>&#127775</td>
+        </tr>
+        <tr>
+            <th scope="row" align="left">Design</th>
+            <td>&#127775</td>
+        </tr>
+        <tr>
+            <td colspan="2"> <a href="https://google.com" target="_blank">
+                    <button>Clique aqui para ir em um site legal!</button>
+                </a> </td>
+        </tr>
+    </table>
+    <h2><a href="/outrapag.html" target="_blank">Clica aqui logo para ganhar uma moto zero!</a></h2>
 </body>
 
 </html>
